Resolves: fdo#84943 make fodt non crashy like odt for formulas inside shapes

where odt checks for a null pTxtCrsr and skips the object and fodt
just ploughed ahead. i.e. make fodt equally useless as odt (fdo#84942)

Change-Id: I915cc1f7c065ea83377e895a932636c82698cf1f